--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practice</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="hey">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae provident illo est ducimus eos incidunt? At atque error dolores deserunt molestias inventore repellendus, nesciunt tempore molestiae iste consequuntur quam! Vel, repellendus odio natus sequi repellat itaque exercitationem omnis iusto nulla molestiae totam, in dolore? Maiores laborum totam minima soluta numquam.</p>
+    </div>
+    <div class="hey">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error nemo, explicabo nihil totam laboriosam blanditiis? Perspiciatis provident cupiditate impedit in!</div>
+    <div class="hey">Lorem ipsum dolor sit amet consectetur adipisicing elit. At mollitia nostrum est reiciendis ex laudantium possimus beatae exercitationem a corrupti consectetur ipsa aut, cum, eligendi ipsam quaerat qui quia accusamus magnam. Doloremque tenetur vel adipisci sint ab molestias eveniet explicabo quis. Saepe recusandae quisquam mollitia ut vitae eligendi cumque. At?
+        
+    </div>
 </body>
 </html>
