git push related

--- a/index.html
+++ b/index.html
@@ -12,7 +12,21 @@
     </div>
     <div class="hey">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error nemo, explicabo nihil totam laboriosam blanditiis? Perspiciatis provident cupiditate impedit in!</div>
     <div class="hey">Lorem ipsum dolor sit amet consectetur adipisicing elit. At mollitia nostrum est reiciendis ex laudantium possimus beatae exercitationem a corrupti consectetur ipsa aut, cum, eligendi ipsam quaerat qui quia accusamus magnam. Doloremque tenetur vel adipisci sint ab molestias eveniet explicabo quis. Saepe recusandae quisquam mollitia ut vitae eligendi cumque. At?
-        
+
+    </div>
+    <div>
+        <h1>How to push incremental code in github</h1>
+        <ul>
+            <li>
+                git add .
+            </li>
+            <li>
+                git commit -m"any massage"
+            </li>
+            <li>
+                git push
+            </li>
+        </ul>
     </div>
 </body>
 </html>
